--- a/index.html
+++ b/index.html
@@ -172,7 +172,30 @@
   <div class="container">
       <h5 class="bottomBorder">Category</h5>
     </div>
-  </div>
+    <div class="container">
+      <div class="row">
+        <div class="left-box d-flex align-items-center justify-content-center col-md-3">
+          <div class="bag">
+            <img src="./images/Categories/bag.png" alt="">
+            <h3>Bag</h3>
+          </div>
+        </div>
+        <div class="left-box d-flex flex-column justify-content-between col-md-3">
+          <div class="perfume">
+            <img src="./images/Categories/perfume.png" alt="">
+            <h3>Beauty</h3>
+          </div>
+          <div class="shoe">
+            <img src="./images/Categories/shoe.png" alt="">
+            <h3>Shoes</h3>
+          </div>
+        </div>
+        <div class="right-box col-md-6">
+          <img src="./images/Categories/pale-order.png" alt="">
+        </div>
+      </div>
+    </div>
+    .container
   <!-- Javascript -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
