--- a/index.html
+++ b/index.html
@@ -195,7 +195,42 @@
         </div>
       </div>
     </div>
-    .container
+    <!-- Form -->
+    <div class="container" id="contact">
+      <section id="form">
+        <div class="form-container">
+          <div class="form-wrap">
+            <h2>ASK YOUR QUESTION</h2>
+            <p>If You Have Any Qustion Please Fill The form.We Will Contact You As Soon As Possible.</p>
+            <form class="main-part">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name">
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email">
+              </div>
+              <div class="form-group">
+                <label for="message">Ask Question</label>
+                <textarea name="" id="message" cols="30" rows="10"></textarea>
+              </div>
+              <button type="submit" class="form-button">Submit</button>
+            </form>
+          </div>
+        </div>
+        <div class="form-footer">
+          <p>By clicking submit you are agreed to our <a href="#">terms and conditions</a></p>
+        </div>
+    </section>
+    <footer>
+      <div class="main-footer">
+        <p>ALL RIGHT RESERVED BY @HOTGADGETS </br>    Email:abcd@gmail.com <br>
+        Copyright &nbsp;2020</p>
+      </div>
+    </footer>
+    </div>
+    
   <!-- Javascript -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
